--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,7 @@
 								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>
 							</ul>
 							<ul class="list">
-								<li><a href="#">Login</a></li>
+								<li><a href="#">Login prueba</a></li>
 								<li><a href="tel:6641239876">664-123-9876</a></li>
 								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>
 							</ul>
