--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -146,7 +146,7 @@
 									      <div class="content-overlay"></div>
 									  		 <img class="content-image img-fluid d-block mx-auto" src="img/c3.jpg" alt="">
 									      <div class="content-details fadeIn-bottom">
-									        <h3 class="content-title">Compra Ahora</h3>
+									        <h3 class="content-title">buy now</h3>
 									      </div>
 									    </a>
 									</div>
